Fix red text flashing and add collapse functionality in Tabs 1 and 5

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -93,13 +93,13 @@
         <div class="col-md-12 scannable-items-section">
             <h3><strong>Scannable Items</strong></h3>
             <ul>
-                <li><strong>All Linens (except Skirts, Spandex, Napkins(Scan Out), Runners, and Sashes are hand entered)</strong></li>
-                <li><strong>All Concession Machines and Resale - No Sterno</strong></li>
+                <li><strong>All Linens (except Skirts, Spandex, Runners, and Sashes are hand entered)</strong></li>
+                <li><strong>All Concession Machines and Resale - No Sterno or Donuts</strong></li>
                 <li><strong>All AV and Sound</strong></li>
-                <li><strong>All Tent Tops</strong></li>
-                <li><strong>Garden Chairs and Dishes/Silverware Packs - (Coming Soon)</strong></li>
-                <li><strong>Fountains and Bev Dispens</strong></li>
-                <li><strong>Cocktail Table Tops & Legs</strong></li>
+                <li><strong>All Tent Tops - No Sidewall</strong></li>
+                <li><strong>Garden Chairs and Cocktail Table Tops</strong></li>
+                <li><strong>Fountains and Bev Dispensers</strong></li>
+                <li><strong>Dishes/Silverware Packs</strong></li>
                 <li><strong>Carpet Runners</strong></li>
             </ul>
         </div>
