--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,85 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>{% block title %}RFID Dashboard{% endblock %}</title>
+    <title>RFID Dashboard</title>
     <!-- Bootstrap CSS -->
-    <link href="{{ url_for('static', filename='lib/bootstrap/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="/static/lib/bootstrap/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <link href="/static/css/style.css" rel="stylesheet">
     <!-- HTMX -->
-    <script src="{{ url_for('static', filename='lib/htmx/htmx.min.js') }}"></script>
-    <!-- JavaScript files -->
-    <script>
-        // Set window.cachedTabNum early based on the URL
-        (function() {
-            const pathMatch = window.location.pathname.match(/\/tab\/(\d+)/);
-            window.cachedTabNum = pathMatch ? parseInt(pathMatch[1], 10) : (window.location.pathname === '/' ? 1 : null);
-            console.log('base.html: window.cachedTabNum set to', window.cachedTabNum);
-        })();
-    </script>
-    <script src="{{ url_for('static', filename='js/common.js') }}?v={{ cache_bust }}-20250427-v1"></script>
-    <script src="{{ url_for('static', filename='js/tab.js') }}?v={{ cache_bust }}-20250427-v4"></script>
-    <script src="{{ url_for('static', filename='js/expand.js') }}?v={{ cache_bust }}-20250427-v4"></script>
-    <script src="{{ url_for('static', filename='js/tab1_5.js') }}?v={{ cache_bust }}-20250427-v4"></script>
+    <script src="/static/lib/htmx/htmx.min.js"></script>
     <!-- Bootstrap JS -->
-    <script src="{{ url_for('static', filename='lib/bootstrap/bootstrap.bundle.min.js') }}"></script>
+    <script src="/static/lib/bootstrap/bootstrap.bundle.min.js"></script>
+    <!-- Common JS -->
+    <script src="/static/js/common.js"></script>
     {% block head %}{% endblock %}
     {% block extra_head %}{% endblock %}
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">RFID DASHBOARD</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/tab/1">Rental Inventory</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/tab/2">Open Contracts</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/tab/3">Service</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/tab/4">Laundry Contracts</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/tab/5">Resale</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/categories">Manage Categories</a>
-                </li>
-            </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">RFID DASHBOARD</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/tab/1">Rental Inventory</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/tab/2">Open Contracts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/tab/3">Service</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/tab/4">Laundry Contracts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/tab/5">Resale</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/categories">Manage Categories</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
-    <!-- Main Container -->
-    <div class="container mt-3">
-        <!-- Top-Level Filter -->
-        <div class="row mb-2 filter-sort-controls">
-            <div class="col">
-                <input type="text" class="form-control" placeholder="Filter by Common Name" id="commonNameFilter">
-            </div>
-            <div class="col">
-                <input type="text" class="form-control" placeholder="Filter by Contract Number" id="contractNumberFilter">
-            </div>
-            <div class="col">
-                <button class="btn btn-primary" onclick="applyGlobalFilter()">Apply</button>
-                <button class="btn btn-secondary" onclick="clearGlobalFilter()">Refresh</button>
-            </div>
-        </div>
-
-        <!-- Main Content -->
+    <div class="container mt-4">
         {% block content %}{% endblock %}
     </div>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'93706b5c6c1e7bae',t:'MTc0NTc3ODkyMy4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script><script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'93725012298ab0cd',t:'MTc0NTc5ODc3Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'93725ef3288212c6',t:'MTc0NTc5OTM4Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+
+    <script>
+        // Set cachedTabNum based on the current URL
+        let tabNum;
+        const pathMatch = window.location.pathname.match(/\/tab\/(\d+)/);
+        if (pathMatch) {
+            tabNum = parseInt(pathMatch[1], 10);
+        } else if (window.location.pathname === '/') {
+            tabNum = 1;
+        } else {
+            tabNum = 1;
+        }
+        window.cachedTabNum = tabNum;
+        console.log('base.html: window.cachedTabNum set to', window.cachedTabNum);
+    </script>
+    {% block scripts %}{% endblock %}
+</body>
 </html>
