--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,77 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% block head %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RFID Dashboard</title>
     <link href="/static/lib/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/style.css" rel="stylesheet">
-    <script src="/static/lib/htmx/htmx.min.js"></script>
-    <script src="/static/lib/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="/static/js/common.js"></script>
-    {% block head %}{% endblock %}
+    {% if request.path == '/tab/1' or request.path == '/tab/5' %}
+        <link href="/static/css/tab1_5.css" rel="stylesheet">
+    {% elif request.path == '/tab/2' or request.path == '/tab/4' %}
+        <link href="/static/css/tab2_4.css" rel="stylesheet">
+    {% endif %}
+    {% endblock %}
     {% block extra_head %}{% endblock %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">RFID DASHBOARD</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/tab/1">Rental Inventory</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/tab/2">Open Contracts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/tab/3">Service</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/tab/4">Laundry Contracts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/tab/5">Resale</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/categories">Manage Categories</a>
-                    </li>
-                </ul>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">RFID DASHBOARD</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="/tab/1">Rental Inventory</a></li>
+                <li class="nav-item"><a class="nav-link" href="/tab/2">Open Contracts</a></li>
+                <li class="nav-item"><a class="nav-link" href="/tab/3">Service</a></li>
+                <li class="nav-item"><a class="nav-link" href="/tab/4">Laundry Contracts</a></li>
+                <li class="nav-item"><a class="nav-link" href="/tab/5">Resale</a></li>
+                <li class="nav-item"><a class="nav-link" href="/categories">Manage Categories</a></li>
+            </ul>
         </div>
     </nav>
 
-    <div class="container mt-4">
+    <div class="container">
         {% block content %}{% endblock %}
     </div>
 
-    <script>
-        let tabNum;
-        const pathMatch = window.location.pathname.match(/\/tab\/(\d+)/);
-        if (pathMatch) {
-            tabNum = parseInt(pathMatch[1], 10);
-        } else if (window.location.pathname === '/') {
-            tabNum = 1;
-        } else {
-            tabNum = 1;
-        }
-        window.cachedTabNum = tabNum;
-        console.log('base.html: window.cachedTabNum set to', window.cachedTabNum);
-    </script>
+    <script src="/static/lib/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="/static/lib/htmx/htmx.min.js"></script>
+    <script src="/static/js/common.js"></script>
     {% block scripts %}
-        {% if window.cachedTabNum == 1 or window.cachedTabNum == 5 %}
-            <link href="/static/css/tab1_5.css" rel="stylesheet">
+        {% if request.path == '/tab/1' or request.path == '/tab/5' %}
             <script src="/static/js/tab1_5.js"></script>
-        {% elif window.cachedTabNum == 2 or window.cachedTabNum == 4 %}
-            <link href="/static/css/tab2_4.css" rel="stylesheet">
+        {% elif request.path == '/tab/2' or request.path == '/tab/4' %}
             <script src="/static/js/expand.js"></script>
-        {% elif window.cachedTabNum == 3 %}
+        {% elif request.path == '/tab/3' %}
             <script src="/static/js/tab3.js"></script>
         {% endif %}
         <script src="/static/js/tab.js"></script>
